# ai-video-intelligence-platform

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: GITHUB_README.md
.github/workflows/: README.md
ai/speech/: __init__.py  faster_whisper.py
backend/ai/speech/: faster_whisper.py  transcriber.py
backend/alembic/: env.py
backend/alembic/versions/: 0baa5f1bac56_add_cascade_delete_for_transcript.py  4d0af1434cf0_add_processing_job_model.py  5784a30cc62d_add_summary_model.py  579f467ba0f7_add_cascade_delete_for_processing_jobs.py  67dd92871eb6_add_transcript_model.py  6bf47ad95c30_add_chapter_model.py  967dfd6716f1_add_flashcard_model.py  a1613be8b18c_create_initial_tables.py  a1babf06e4d1_add_embedding_model.py  aea3aec5b92e_add_is_active.py  ca3c373f5be9_add_translation_model.py  cfa58af66763_add_user_and_video_models.py  e798b732a6f5_add_quiz_model.py  e8dc7cf6aba8_add_chat_history_model.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  health.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  oauth2.py
backend/app/config/: constants.py  model_config.py  settings.py
backend/app/core/: __init__.py  constants.py  exceptions.py  security.py  startup.py
backend/app/database/: __init__.py  base.py  postgres.py  (+1 more)
backend/scripts/: test_audio.py  test_db.py  test_model.py  test_session.py  test_whisper.py  test_worker.py
requirements/: requirements-v1.txt  requirements-v2.txt  requirements-v3.txt  requirements-v4.txt  requirements-v5.txt  requirements-v6.txt  requiremetns-v7.txt
(+49 files in other folders)
