[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "ai-video-intelligence-platform"
version = "0.1.0"
description = "AI Video Intelligence Platform"
requires-python = ">=3.11"


[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "ai*",
    "backend.app*",
]